[package]
name = "cunner"
version = "0.1.0"
edition = "2021"
authors = ["Harsh Pratap Singh <harshpratapsingh8210@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
rand = "0.8.5"
byteorder = "1.2.3"
ring = "0.17.8"
hex = "0.4.3"
prost = { version = "0.12.6", features = ["prost-derive"] }
prost-types = "0.12.6"
bytes = "1.6.0"
ecdsa = { version = "0.16.9", features = ["signing"] }
secp256k1 = "0.29.0"
sha2 = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
k256 = "0.13.3"

[build-dependencies]
prost-build = "0.12.6"